k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fallout-shelter
  labels:
    name: fallout-shelter
    app: fallout-shelter
